Linux: JavaFX window not painted with background when using GTK 3

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 9
    • Affects Version/s: 9
    • Component/s: javafx

      To reproduce, run Ensemble with GTK 3 on Ubuntu (I used 14.04) :

      $ java -Djdk.gtk.version=3 -Djdk.gtk.verbose=true -jar Ensemble8.jar

      The window will initially be shown without anything being painted in the background. You will see some leftover garbage from earlier. After a brief pause, the Stage will be rendered with the content of the scene.

      This does not happen with GTK 2.

      One other observation is that this used to happen only very rarely on my system. Starting with the fix for JDK-8088179 it now happens 100% of the time. This suggests that we may be mishandling the background color in the gtk3 case.

            Assignee:
            Semyon Sadetsky (Inactive)
            Reporter:
            Kevin Rushforth
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: