8171976: Linux: JavaFX window not painted with background when using GTK 3

Reviewed-by: kcr, ddhill